bugfix/WY-375 fix alignment styles especially for image blocks, and restrict block editor to theme's content size

--- a/src/admin/scss/admin.scss
+++ b/src/admin/scss/admin.scss
@@ -8,6 +8,9 @@
 
     padding-left: spacing('s') !important;
     padding-right: spacing('s') !important;
+	max-width: var(--wp--style--global--content-size);
+	width: 100%;
+	margin: auto !important;
 
 	.block-editor-block-list__layout.is-root-container {
 		.wp-block-hds-wp-image-banner {
@@ -15,7 +18,12 @@
 			margin-right: calc(50% - 50vw)!important;
 			max-width: 100vw;
 			width: 100vw;
-		}	
+		}
+		.wp-block-freeform {
+			* {
+				clear: both; //hack to fix alignment issues
+			}
+		}
 	}
 
     @import '../../scss/elements';
